Arreglado un bug con iPhone

--- a/tp2.css
+++ b/tp2.css
@@ -105,6 +105,7 @@ body {
 	color: #bc3b69;
   border-style: solid;
   border-color: #882b4b;
+	z-index: 100;
 }
 
 .perdedor {
@@ -118,6 +119,7 @@ body {
 	color: #bc3b69;
   border-style: solid;
   border-color: #882b4b;
+	z-index: 100;
 }
 
 .anuncio {
